review fixes
Signed-off-by: AbdelHedhili <abdelsalem.hedhili@rte-france.com>